--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,15 @@
 body {
-  color: rgba(39, 48, 59, 80);
+  color: rgba(39, 48, 59, 0.8);
   font-family: Avenir;
-  font-size: 18px;
+  font-size: 22px;
   margin: 0px;
   background-color: #FAFAFA;
+  line-height: 1.8;
 }
 
 .main {
   position: relative;
 }
-
 .wallpaper {
   position: absolute;
 }
@@ -34,19 +34,19 @@ body {
   left: 87%;
 }
 .confetti-6 {
-  top: 98%;
+  top: 92%;
   right: 87%;
 }
 .confetti-7 {
-  top: 126%;
-  right: 42%;
+  top: 86%;
+  right: 62%;
 }
 .confetti-8 {
   top: 106%;
   right: 22%;
 }
 .confetti-9 {
-  top: 78%;
+  top: 207%;
   left: 67%;
 }
 .confetti-10 {
@@ -54,8 +54,32 @@ body {
   right: 87%;
 }
 .confetti-11 {
-  top: 86%;
-  right: 62%;
+  top: 316%;
+  right: 12%;
+}
+.confetti-12 {
+  top: 206%;
+  left: -1%;
+}
+.confetti-13 {
+  top: 76%;
+  right: 20%;
+}
+.confetti-14 {
+  top: 126%;
+  right: 42%;
+}
+.confetti-15 {
+  top: 211%;
+  left: 34%;
+}
+.confetti-16 {
+  top: 261%;
+  left: 12%;
+}
+.confetti-17 {
+  top: 270%;
+  right: 12%;
 }
 
 .menu {
@@ -69,24 +93,27 @@ body {
 }
 
 .slider {
-  height: 90vh;
+  height: 100vh;
   font-size: 52px;
   display: flex;
   align-items: center;
-  line-height: 1.3;
-  letter-spacing: -2.5px;
+  letter-spacing: -1.5px;
 }
 
 .about {
   text-align: center;
+  height: 60vh;
+  max-width: 800px;
 }
 
 .skills {
-  margin: 20vh 0;
+  margin-bottom: 200px;
+  height: 100vh;
 }
 
 .skill {
-  margin: 5vh 0;
+  margin: 8vh 0;
+  padding: 0px 40px;
 }
 
 .card {
@@ -107,13 +134,18 @@ body {
   }
 
   .cta-talk {
-  background-image: linear-gradient(120deg, #89f7fe 0%, #66a6ff 100%);
-  border-radius: 12px;
+  background: linear-gradient(120deg, #89f7fe 0%, #66a6ff 100%);
+  border-radius: 40px;
   color: white;
-  width: 160px;
+  width: 180px;
   height: 50px;
-  margin: auto;
-  line-height: 1.9;
+  line-height: 1.8;
+  margin: 15% auto;
+  transition: all .2s ease-in-out;
+  }
+
+  .cta-talk:hover {
+  transform: background: linear-gradient(120deg, #F6D365 0%, #FDA085 100%);;
   }
 
   .decoration-none:hover {
@@ -132,6 +164,15 @@ body {
   left: 36%;
 }
 
+.dot-online {
+  width: 14px;
+  height: 14px;
+  border-radius: 50%;
+  background-color: #00d664;
+  position: relative;
+  left: 54.5%;
+}
+
 .oval-green {
   position: absolute;
   margin-left: 40px;
@@ -140,9 +181,25 @@ body {
 
 .forward {
   z-index: 1;
-
 }
 
 .backward {
   z-index: -1;
 }
+
+.card > p {
+  font-size: 12px;
+  text-align: center;
+  padding-top: 10px;
+}
+
+.footer {
+  height: 80px;
+  background: #303843;
+  color: white;
+  text-align: center;
+  padding: 28px 0px;
+  font-size: 16px;
+  letter-spacing: 1px;
+}
+
