--- a/css/style.css
+++ b/css/style.css
@@ -134,18 +134,13 @@ body {
   }
 
   .cta-talk {
-  background: linear-gradient(120deg, #89f7fe 0%, #66a6ff 100%);
+  background-image: linear-gradient(120deg, #89f7fe 0%, #66a6ff 100%);
   border-radius: 40px;
   color: white;
   width: 180px;
   height: 50px;
   line-height: 1.8;
   margin: 15% auto;
-  transition: all .2s ease-in-out;
-  }
-
-  .cta-talk:hover {
-  transform: background: linear-gradient(120deg, #F6D365 0%, #FDA085 100%);;
   }
 
   .decoration-none:hover {
