--- a/css/style.css
+++ b/css/style.css
@@ -207,6 +207,7 @@ body {
   text-align: center;
   padding: 28px 0px;
   font-size: 16px;
-  letter-spacing: 1px;
+  letter-spacing: 1.2px;
+  line-height: 1.8;
 }
 
