--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body {
   color: rgba(39, 48, 59, 0.8);
   font-family: Avenir;
-  font-size: 22px;
+  font-size: 20px;
   margin: 0px;
   background-color: #FAFAFA;
   line-height: 1.8;
@@ -82,15 +82,6 @@ body {
   right: 12%;
 }
 
-.menu {
-  display: flex;
-  justify-content: space-around;
-  justify-content: flex-end;
-}
-
-.menu-item {
-  padding: 30px 40px;
-}
 
 .slider {
   height: 100vh;
@@ -104,7 +95,7 @@ body {
 }
 
 .position {
-  font-size: 28px;
+  font-size: 24px;
   font-weight: lighter;
 }
 
@@ -113,9 +104,18 @@ body {
 }
 
 .about {
+  height: 80vh;
+}
+
+.profile-pic-section {
   text-align: center;
-  height: 60vh;
-  max-width: 800px;
+}
+
+.about-txt{
+  height: 240px;
+  display: table-cell;
+  vertical-align: middle;
+  font-size: 24px;
 }
 
 .skills {
@@ -128,10 +128,14 @@ body {
   padding: 0px 40px;
 }
 
+.skill a {
+  color: rgba(39, 48, 59, 0.8);
+}
+
 .card {
   height: 500px;
   width: 360px;
-  font-size: 20px;
+  font-size: 18px;
   margin: auto;
   box-shadow: 0 0 6px 0 rgba(30,45,62,.09);
   background-color: white;
@@ -147,11 +151,11 @@ body {
 
   .cta-talk {
   background-image: linear-gradient(120deg, #89f7fe 0%, #66a6ff 100%);
-  border-radius: 40px;
+  border-radius: 12px;
   color: white;
   width: 180px;
   height: 50px;
-  line-height: 1.8;
+  line-height: 2;
   margin: 15% auto;
   }
 
@@ -163,12 +167,18 @@ body {
     width: 360px;
   }
 
-.profile-pic {
+
+.small-profile-pic {
   max-height: 100px;
   border-radius: 50%;
   position: absolute;
   top: 75px;
   left: 36%;
+}
+
+.big-profile-pic {
+  max-height: 240px;
+  border-radius: 50%;
 }
 
 .dot-online {
@@ -186,14 +196,6 @@ body {
   margin-top: 50px;
 }
 
-.forward {
-  z-index: 1;
-}
-
-.backward {
-  z-index: -1;
-}
-
 .card > p {
   font-size: 12px;
   text-align: center;
@@ -209,5 +211,13 @@ body {
   font-size: 16px;
   letter-spacing: 1.2px;
   line-height: 1.8;
+}
+
+.forward {
+  z-index: 1;
+}
+
+.backward {
+  z-index: -1;
 }
 
