--- a/css/style.css
+++ b/css/style.css
@@ -82,7 +82,6 @@ body {
   right: 12%;
 }
 
-
 .slider {
   height: 100vh;
   line-height: 2.2;
@@ -92,6 +91,10 @@ body {
 .greeting {
   display: table-cell;
   vertical-align: middle;
+}
+
+.greeting h1 {
+  font-size: 60px;
 }
 
 .position {
@@ -118,11 +121,6 @@ body {
   font-size: 24px;
 }
 
-.skills {
-  margin-bottom: 200px;
-  height: 100vh;
-}
-
 .skill {
   margin: 8vh 0;
   padding: 0px 40px;
@@ -130,6 +128,10 @@ body {
 
 .skill a {
   color: rgba(39, 48, 59, 0.8);
+}
+
+.contact {
+  height: 100vh;
 }
 
 .card {
@@ -141,6 +143,7 @@ body {
   background-color: white;
   border-radius: 12px;
   position: relative;
+  top: 14%;
   }
 
   .card-content {
@@ -220,4 +223,33 @@ body {
 .backward {
   z-index: -1;
 }
+
+
+@media (min-width: @screen-md-min) {
+  .skills {
+  height: 100vh;
+  }
+}
+
+@media (max-width: 400px) {
+  .greeting h1 {
+  font-size: 38px;
+  }
+  .position {
+  font-size: 22px;
+  }
+  .about-txt {
+    font-size: 22px;
+  }
+  .profile-pic-section {
+    padding-bottom: 5vh;
+  }
+  .confetti-16 {
+  top: 300%;
+  left: 12%;
+  }
+}
+
+
+
 
