--- a/css/style.css
+++ b/css/style.css
@@ -145,22 +145,27 @@ body {
   background-color: white;
   border-radius: 12px;
   position: relative;
-  }
+}
 
   .card-content {
-  padding: 25px;
-  text-align: center;
-  font-size: 26px;
+    padding: 25px;
+    text-align: center;
+    font-size: 26px;
   }
 
   .cta-talk {
-  background-image: linear-gradient(120deg, #89f7fe 0%, #66a6ff 100%);
-  border-radius: 12px;
-  color: white;
-  width: 180px;
-  height: 50px;
-  line-height: 2;
-  margin: 15% auto;
+    background-image: linear-gradient(120deg, #89f7fe 0%, #66a6ff 100%);
+    border-radius: 12px;
+    color: white;
+    width: 180px;
+    height: 50px;
+    line-height: 2;
+    margin: 15% auto;
+    transition: 0.5s ease;
+  }
+
+   .cta-talk:hover {
+    box-shadow: 0 2px 12px rgba(39,21,102,.3);
   }
 
   .decoration-none:hover {
