changing the color of the footer

--- a/css/style.css
+++ b/css/style.css
@@ -220,7 +220,7 @@ padding-top: 10px;
   font-size: 14px;
   letter-spacing: 1.2px;
   line-height: 3.8;
-  color: #465464;
+  color: white;
 }
 
 .footer img {
