--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,21 @@
 body {
   color: rgba(39, 48, 59, 0.8);
   font-family: Avenir;
-  font-size: 20px;
+  font-size: 24px;
   margin: 0px;
   background-color: #FAFAFA;
   line-height: 1.8;
+  color: rgba(39,48,59,0.8);
 }
 
 .main {
   position: relative;
 }
+
+.row {
+  margin: 3em 0;
+}
+
 .wallpaper {
   position: absolute;
 }
@@ -19,7 +25,7 @@ body {
 }
 .confetti-2 {
   top: 16%;
-  right: 17%;
+  right: 27%;
 }
 .confetti-3 {
   top: 32%;
@@ -27,7 +33,7 @@ body {
 }
 .confetti-4 {
   top: 148%;
-  right: 67%;
+  right: 87%;
 }
 .confetti-5 {
   top: 118%;
@@ -38,8 +44,8 @@ body {
   right: 87%;
 }
 .confetti-7 {
-  top: 86%;
-  right: 62%;
+  top: 466%;
+  right: 32%;
 }
 .confetti-8 {
   top: 106%;
@@ -81,9 +87,21 @@ body {
   top: 270%;
   right: 12%;
 }
+.confetti-18 {
+  top:176%;
+  left: 77%;
+}
+.confetti-19 {
+  top:77%;
+  right: 34%;
+}
+.confetti-20 {
+  top: 277%;
+  left: 80%;
+}
 
 .slider {
-  line-height: 2.2;
+  line-height: 2.0;
   display: table;
   height: 100vh;
 }
@@ -91,14 +109,16 @@ body {
 .greeting {
   display: table-cell;
   vertical-align: middle;
+  padding-bottom: 10vh;
 }
 
 .greeting h1 {
-  font-size: 60px;
+  font-size: 64px;
 }
 
 .position {
   font-size: 24px;
+  font-family: Lato;
   font-weight: lighter;
 }
 
@@ -108,116 +128,116 @@ body {
 
 .about {
   height: 100%;
-  margin: 25vh 0;
+  margin: 20vh 0;
 }
 
 .profile-pic-section {
   text-align: center;
 }
 
-.about-txt{
-height: 240px;
-display: table-cell;
-vertical-align: middle;
-font-size: 24px;
+.icon {
+  padding-bottom: 25px;
 }
 
+.about-txt{
+  height: 240px;
+  display: table-cell;
+  vertical-align: middle;
+  font-size: 24px;
+  font-family: Lato;
+  font-weight: lighter;
+}
+
+
 .skill {
-margin: 8vh 0;
-padding: 0px 40px;
+  padding: 60px 50px;
+  margin: 50px;
+  background-color: white;
+  border-radius: 10px;
+  box-shadow: 0px 15px 45px -5px rgba(0,0,0,30%);
+  max-width: 450px;
+  height: 545px;
+}
+
+.contact {
+  padding: 60px 50px;
+  margin: 50px;
+  background-color: white;
+  border-radius: 10px;
+  box-shadow: 0px 15px 45px -5px rgba(0,0,0,30%);
+  max-width: 450px;
+  margin-top: -100px;
+}
+
+.contact p {
+  font-family: Lato;
+  font-weight: lighter;
+  line-height: 1.5;
+}
+
+.skill p {
+  font-family: Lato;
+  font-weight: lighter;
+  line-height: 1.5;
+}
+
+.digital-mkg {
+  margin-top:200px
+}
+
+.developer {
+  margin-top:-100px
 }
 
 .skill a {
 color: rgba(39, 48, 59, 0.8);
 }
 
-.contact {
-height: 100%;
-margin: 5vh 0;
-}
-
-.card {
-height: 500px;
-width: 360px;
-font-size: 18px;
-margin: auto;
-box-shadow: 0 0 6px 0 rgba(30,45,62,.09);
-background-color: white;
-border-radius: 12px;
-position: relative;
-}
-
-.card-content {
-  padding: 25px;
-  text-align: center;
-  font-size: 26px;
-}
-
 .cta-talk {
-  background-image: linear-gradient(120deg, #89f7fe 0%, #66a6ff 100%);
-  border-radius: 12px;
+  background-color: rgba(39,48,59,0.8);
+  border-radius: 10px;
   color: white;
-  width: 180px;
+  width: 200px;
   height: 50px;
-  line-height: 2;
-  margin: 15% auto;
+  line-height: 2.2;
   transition: 0.5s ease;
+  font-weight: 500;
+  text-align: center;
+  box-shadow: 0px 15px 45px -5px rgba(0,0,0,30%);
+  margin-top: 25px;
 }
 
  .cta-talk:hover {
-  box-shadow: 0 2px 12px rgba(39,21,102,.3);
+  box-shadow: 0px 15px 45px 5px rgba(0,0,0,30%);
+  cursor: pointer;
+  transform: translate(0px, -2px);
 }
 
 a, a:hover, a:active, a:visited, a:focus {
   text-decoration:none;
 }
 
-.wave {
-  width: 360px;
-}
-
-
 .small-profile-pic {
-max-height: 100px;
-border-radius: 50%;
-position: absolute;
-top: 75px;
-left: 36%;
+  max-height: 100px;
+  border-radius: 50%;
+  position: absolute;
+  top: 75px;
+  left: 36%;
 }
 
 .big-profile-pic {
-max-height: 240px;
-border-radius: 50%;
+  max-height: 240px;
+  border-radius: 50%;
 }
 
-.dot-online {
-width: 14px;
-height: 14px;
-border-radius: 50%;
-background-color: #00d664;
-position: relative;
-left: 54.5%;
-}
-
-.oval-green {
-position: absolute;
-margin-left: 40px;
-margin-top: 50px;
-}
-
-.card > p {
-font-size: 12px;
-text-align: center;
-padding-top: 10px;
-}
 
 .footer {
   height: 80px;
-  background: #1e2730;
+  background-color: rgba(39,48,59,0.8);
   color: white;
   text-align: center;
   padding: 15px 0px;
-  font-size: 14px;
+  font-size: 16px;
   letter-spacing: 1.2px;
   line-height: 3.8;
   color: white;
@@ -258,17 +278,37 @@ z-index: -1;
 @media only screen
   and (orientation:portrait)
   and (max-device-width: 768px) {
+  .cta-talk {
+    width: 350px;
+    height: 80px;
+  }
   .about {
     margin: 5vh 0;
+    height: 70vh;
   }
+  .skill {
+    max-width: 90%;
+    height: 50vh;
+    margin: 5vh 0px !important;
+
+  }
+  .developer {
+    margin: 5vh 0px !important;
+  }
+  .digital-mkg {
+    margin: 5vh 0px !important;
+  }
+  .contact {
+    max-width: 90%;
+    font-size: 40px;
+    margin: 5vh 0px !important;
+  }
+
   .greeting h1 {
-  font-size: 80px;
+  font-size: 88px;
   }
   .greeting {
     height: 105vh;
-  }
-  .card {
-    top: 0%;
   }
   .position {
   font-size: 40px;
@@ -280,25 +320,7 @@ z-index: -1;
     font-size: 40px;
   }
   .title {
-    font-size: 50px;
-  }
-  .card-content {
-    font-size: 40px;
-  }
-  .card {
-    height: 650px;
-    width: 450px;
-  }
-  .wave {
-    width: 450px;
-  }
-  .cta-talk {
-    height: 80px;
-    width: 240px;
-    margin: 5% auto;
-  }
-  .dot-online {
-    top: -12px;
+    font-size: 56px;
   }
   .profile-pic-section {
     padding-bottom: 5vh;
@@ -308,8 +330,8 @@ z-index: -1;
     top: 105px;
   }
   .confetti-1 {
-  top: 8%;
-  left: 10%;
+    top: 8%;
+    left: 10%;
   }
   .confetti-2 {
     top: 16%;
@@ -344,7 +366,7 @@ z-index: -1;
     left: 67%;
   }
   .confetti-10 {
-    top: 288%;
+    top: 208%;
     right: 87%;
   }
   .confetti-11 {
@@ -374,6 +396,18 @@ z-index: -1;
   .confetti-17 {
     top: 60%;
     left: 20%;
+  }
+  .confetti-18 {
+    top:176%;
+    left: 77%;
+  }
+  .confetti-19 {
+    top:27%;
+    right: 107%;
+  }
+  .confetti-20 {
+    top:7%;
+    left: 70%;
   }
 }
 
