--- a/css/style.css
+++ b/css/style.css
@@ -346,7 +346,7 @@ z-index: -1;
     right: 67%;
   }
   .confetti-5 {
-    top: 118%;
+    top: 318%;
     left: 87%;
   }
   .confetti-6 {
@@ -358,11 +358,11 @@ z-index: -1;
     right: 62%;
   }
   .confetti-8 {
-    top: 106%;
-    right: 22%;
+    top: 176%;
+    left: 22%;
   }
   .confetti-9 {
-    top: 207%;
+    top: 317%;
     left: 67%;
   }
   .confetti-10 {
@@ -370,11 +370,11 @@ z-index: -1;
     right: 87%;
   }
   .confetti-11 {
-    top: 199%;
+    top: 329%;
     left: 37%;
   }
   .confetti-12 {
-    top: 206%;
+    top: 286%;
     left: -1%;
   }
   .confetti-13 {
@@ -394,8 +394,8 @@ z-index: -1;
     left: 79%;
   }
   .confetti-17 {
-    top: 60%;
-    left: 20%;
+    top: 360%;
+    left: 10%;
   }
   .confetti-18 {
     top:176%;
@@ -406,8 +406,12 @@ z-index: -1;
     right: 107%;
   }
   .confetti-20 {
-    top:7%;
-    left: 70%;
+    top:389%;
+    left: 23%;
+  }
+  .footer {
+    font-size: 24px;
+    height: 110px;
   }
 }
 
