--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,7 @@ body {
 }
 .confetti-7 {
   top: 466%;
-  right: 32%;
+  left: 13%;
 }
 .confetti-8 {
   top: 106%;
@@ -96,7 +96,7 @@ body {
   right: 34%;
 }
 .confetti-20 {
-  top: 277%;
+  top: 257%;
   left: 80%;
 }
 
